# flextop

./: .gitignore  README.md  meson.build
src/: flextop-init.c  flextop-utils.c  flextop-utils.h  xdg-desktop-menu.c  xdg-icon-resource.c
